fix(cookie-bar) use margin for spacing

--- a/components/cookie-bar/cookie-bar.less
+++ b/components/cookie-bar/cookie-bar.less
@@ -35,6 +35,7 @@
 }
 
 .cookie-bar-link {
+  margin-left: @spacing-default/2;
   border-bottom: 1px solid @white;
   color: @white;
   text-decoration: none;
